--- a/Dockerfile.task_base
+++ b/Dockerfile.task_base
@@ -10,6 +10,17 @@ RUN pip install "setuptools>=65.5.1"
 
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
+RUN apt-get update \
+ && apt-get install -y \
+    build-essential \
+    curl \
+    git \
+    python3-pip \
+    rsync \
+    wget \
+    zlib1g-dev \
+ && rm -rf /var/lib/apt/lists/*
+
 # Install common packages
 COPY requirements-task-base.txt /tmp/requirements.txt
 RUN python -m pip install --no-build-isolation -r /tmp/requirements.txt
