--- a/datasets/chesapeake_lulc/dataset.yaml
+++ b/datasets/chesapeake_lulc/dataset.yaml
@@ -20,6 +20,7 @@ collections:
             name_starts_with: lc-7/
             chunk_length: 1000
     chunk_storage:
+      # can be replaced with your own storage -> blob://myblobstorage/chesapeake-etl-data/pctasks-chunks/lc-7/
       uri: blob://landcoverdata/chesapeake-etl-data/pctasks-chunks/lc-7/
   - id: chesapeake-lc-13
     template: ${{ local.path(./collection/chesapeake-lc-13) }}
@@ -32,6 +33,7 @@ collections:
             name_starts_with: lc-13/
             chunk_length: 1000
     chunk_storage:
+      # can be replaced with your own storage -> blob://myblobstorage/chesapeake-etl-data/pctasks-chunks/lc-7/
       uri: blob://landcoverdata/chesapeake-etl-data/pctasks-chunks/lc-13/
   - id: chesapeake-lu
     template: ${{ local.path(./collection/chesapeake-lu) }}
@@ -44,5 +46,6 @@ collections:
             name_starts_with: lu/
             chunk_length: 1000
     chunk_storage:
+      # can be replaced with your own storage -> blob://myblobstorage/chesapeake-etl-data/pctasks-chunks/lc-7/
       uri: blob://landcoverdata/chesapeake-etl-data/pctasks-chunks/lu/
 
