--- a/dev/nginx/etc/nginx/conf.d/default.conf
+++ b/dev/nginx/etc/nginx/conf.d/default.conf
@@ -6,7 +6,7 @@ server {
     listen 80;
     server_name localhost;
 
-    location /tasks/ {
+    location /tasks {
         proxy_set_header Host $http_host;
         proxy_set_header X-Forwarded-For $remote_addr;
         proxy_pass_request_headers on;
@@ -14,10 +14,7 @@ server {
         proxy_buffer_size "16k";
 
         proxy_pass http://pctasks-server-upstream;
-        proxy_redirect http://pctasks-server-upstream/ /tasks/;
-    }
-
-    location /tasks {
-        return 301 /tasks/;
+        proxy_redirect http://pctasks-server-upstream/ /tasks;
+        rewrite ^/tasks/?(.*)$ /$1 break;
     }
 }
